@@ -12,7 +12,7 @@ For more information, see http://cassandra.apache.org/[the Apache Cassandra web 
 Requirements
 ------------
 . Java >= 1.8 (OpenJDK and Oracle JVMS have been tested)
-. Python 2.7 (for cqlsh)
+. Python 3.6+ (for cqlsh; 2.7 works but is deprecated)
 
 Getting started
 ---------------
