@@ -43,7 +43,7 @@ Prerequisites
 - **NOTE**: *Experimental* support for Java 11 was added in Cassandra 4.0 (`CASSANDRA-9608 <https://issues.apache.org/jira/browse/CASSANDRA-9608>`__).
   Running Cassandra on Java 11 is *experimental*. Do so at your own risk. For more information, see
   `NEWS.txt <https://github.com/apache/cassandra/blob/trunk/NEWS.txt>`__.
-- For using cqlsh, the latest version of `Python 2.7 <https://www.python.org/downloads/>`__ or Python 3.6+. To verify that you have
+- For using cqlsh, the latest version of `Python 3.6+ <https://www.python.org/downloads/>`__ or Python 2.7 (support deprecated). To verify that you have
   the correct version of Python installed, type ``python --version``.
 
 Choosing an installation method
